--- a/index.html
+++ b/index.html
@@ -23,13 +23,17 @@
               <div class="bar"></div>
             </div>
             <ul>
-              <li><a href="#manager" data-after="Contact">المدراء</a></li>
-              <li><a href="#img" data-after="About">الصور المدرسية</a></li>
+              <li><a href="#manager" data-after="المدراء">المدراء</a></li>
               <li>
-                <a href="#study-years" data-after="Projects">الصفوف</a>
+                <a href="#img" data-after="الصور المدرسية">الصور المدرسية</a>
               </li>
-              <li><a href="#servises" data-after="Service">الخدمات</a></li>
-              <li><a href="#home" data-after="Home">الصفحة الريئسية</a></li>
+              <li>
+                <a href="#study-years" data-after="الصفوف">الصفوف</a>
+              </li>
+              <li><a href="#servises" data-after="الخدمات">الخدمات</a></li>
+              <li>
+                <a href="#home" data-after="الصفحة الريئسية">الصفحة الريئسية</a>
+              </li>
             </ul>
           </div>
         </div>
